--- a/views/hello.hbs
+++ b/views/hello.hbs
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Hello!</title>
 </head>
 <body>
-    <h1>About</h1>
-    <p>This will be about me :)</p>
+    <h1>Hello {{name}}</h1>
 </body>
 </html>
