--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,2 +1,24 @@
-    <h2>Contact</h2>
-    <p>You can always contact me!</p>
+<h2>Contact me</h2>
+<form action="/contact/send-message" method="POST">
+  {{#if isSent}}
+    <div>The Message was sent</div>
+  {{/if}}
+
+  {{#if isError}}
+    <div>You can't leave fields empty!</div>
+  {{/if}}
+
+  <label>
+    Your name: <input type="text" name="author">
+  </label>
+  <label>
+    Your email: <input type="email" name="sender">
+  </label>
+  <label>
+    Title: <input type="text" name="title">
+  </label>
+  <label>
+    Message: <textarea name="message"></textarea>
+  </label>
+  <button type="submit">Send message</button>
+</form>
